--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/JaanoSeekho
+spring.datasource.url = jdbc:mysql://localhost:3306/Screener_DB
 spring.datasource.username = root
 spring.datasource.password = password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
