changes for delete permissions

--- a/src/main/resources/constant.properties
+++ b/src/main/resources/constant.properties
@@ -1,6 +1,11 @@
 apiKey=s40oMXhsVSY-GUYEVxYGow5vhm1Hbti1bCYaPOhFgi
-smsHead=Your jaanoAurSeekho Premium Membership expired on
-smsTrail= Renew it immediately to continue services. To renew , click https://imjo.in/pr3mCB and make payment.
+smsHead=Your JaanoAurSeekho Subscription has expired on 
+smsTrail= You will stop recieving whatsapp messages and also will lose access\n\
+		  to short term/long term calls on site as well as screener access. \n \n\
+		  Please Renew to avoid disruption to services! \n \n\
+		  To renew  monthly 1000 rs  , click here  https://imjo.in/pr3mCB \n \n\
+		  To renew 6 months at 20% off , click here https://imjo.in/Dbb96e.
+		  
 emailMessage=Your jaanoAurSeekho Premium Membership expires tomorrow. Renew it immediately to continue services. To renew , click https://imjo.in/pr3mCB and make payment.
 smsSender=JannoAurSeekho
 mailSender=Team@JaanoAurSeekho
